--- a/package.json
+++ b/package.json
@@ -13,11 +13,9 @@
   ],
   "dependencies": {
     "axios": "^1.5.0",
-    "d3": "^7.8.5",
     "d3-chord": "^3.0.1",
-    "pinia": "^2.1.6",
-    "vue": "^3.3.4",
-    "vuex": "^4.0.2"
+    "d3-shape": "^3.2.0",
+    "vue": "^3.3.4"
   },
   "devDependencies": {
     "@data-fair/dev-server": "^1.11.0",
