--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@data-fair/app-dashboards",
-  "version": "0.0.1-staging.3",
+  "version": "0.0.0",
   "scripts": {
     "dev": "cross-env DATAFAIR_URL=https://staging-koumoul.com/data-fair DATAFAIR_OWNER_ID=jxKDdH3lR APP_URL=http://localhost:5173/ df-dev-server",
     "dev-src": "vite",
