--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dist"
   ],
   "dependencies": {
+    "@nuxt/content": "^2.8.2",
     "axios": "^1.5.0",
     "d3-chord": "^3.0.1",
     "d3-shape": "^3.2.0",
