--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@data-fair/app-dashboards",
+  "name": "@data-fair/app-chord-diagram",
   "version": "0.0.0",
   "scripts": {
-    "dev": "cross-env DATAFAIR_URL=https://staging-koumoul.com/data-fair DATAFAIR_OWNER_ID=jxKDdH3lR APP_URL=http://localhost:5173/ df-dev-server",
-    "dev-src": "vite",
+    "dev": "cross-env DATAFAIR_URL=https://staging-koumoul.com/data-fair DATAFAIR_OWNER_ID=jxKDdH3lR df-dev-server",
+    "dev-src": "nuxt dev",
     "build": "rm -rf dist && PUBLIC_URL=https://cdn.jsdelivr.net/npm/@data-fair/app-dashboards@${npm_package_version}/dist nuxt generate && rm dist && cp -rf .output/public ./dist",
     "prepublishOnly": "npm run build",
     "lint": "eslint . --fix"
@@ -12,19 +12,17 @@
     "dist"
   ],
   "dependencies": {
-    "@nuxt/content": "^2.8.2",
     "axios": "^1.5.0",
     "d3-chord": "^3.0.1",
     "d3-shape": "^3.2.0",
+    "nuxt": "^3.7.4",
     "vue": "^3.3.4"
   },
   "devDependencies": {
     "@data-fair/dev-server": "^1.11.0",
-    "@vitejs/plugin-vue": "^4.3.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.48.0",
     "eslint-plugin-vue": "^9.17.0",
-    "jest": "^29.6.4",
-    "vite": "^4.4.9"
+    "jest": "^29.6.4"
   }
 }
