--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@data-fair/app-chord-diagram",
   "version": "0.0.0",
   "scripts": {
-    "dev": "cross-env DATAFAIR_URL=https://staging-koumoul.com/data-fair DATAFAIR_OWNER_ID=jxKDdH3lR df-dev-server",
+    "dev": "cross-env df-dev-server",
     "dev-src": "nuxt dev",
     "build": "rm -rf dist && PUBLIC_URL=https://cdn.jsdelivr.net/npm/@data-fair/app-dashboards@${npm_package_version}/dist nuxt generate && rm dist && cp -rf .output/public ./dist",
     "prepublishOnly": "npm run build",
@@ -15,14 +15,14 @@
     "axios": "^1.5.0",
     "d3-chord": "^3.0.1",
     "d3-shape": "^3.2.0",
-    "nuxt": "^3.7.4",
-    "vue": "^3.3.4"
+    "nuxt": "3.5.2"
   },
   "devDependencies": {
     "@data-fair/dev-server": "^1.11.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.48.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "jest": "^29.6.4"
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "@types/node": "^18",
+    "@typescript-eslint/eslint-plugin": "^5.59.8"
   }
 }
