--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "axios": "^1.5.0",
     "d3-chord": "^3.0.1",
     "d3-shape": "^3.2.0",
+    "google-palette": "^1.1.1",
     "nuxt": "3.5.2"
   },
   "devDependencies": {
     "@data-fair/dev-server": "^1.12.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.48.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@types/node": "^18",
-    "@typescript-eslint/eslint-plugin": "^5.59.8"
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.48.0"
   }
 }
