--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "d3-chord": "^3.0.1",
     "d3-shape": "^3.2.0",
     "google-palette": "^1.1.1",
-    "nuxt": "3.5.2"
+    "nuxt": "3.5.2",
+    "vite-plugin-vuetify": "^1.0.2",
+    "vue-window-size": "^2.0.0"
   },
   "devDependencies": {
     "@data-fair/dev-server": "^1.12.0",
